--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100vh;
+  background: #f4fefe;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding-top: 1rem; 
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: flex-start; 
+  gap: 1rem; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  background-color: rgba(6, 2, 2, 0.856);
+  color: #df5c0a;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin-top: 0; /* Ensure no extra top margin */
+}
+
+
+.wrapper{
+  background: rgba(6, 2, 2, 0.856);
+  width: 30rem;
+  height: 10rem;
+  padding: 2rem;
+  margin-top: 4rem;
+  margin-left: 1rem;
+  border-radius: 1rem;
+
+}
+.screen{
+height: 4rem;
+  margin-bottom: 4rem;
+  color: #f4fefe;
+
 }
