--- a/src/App.css
+++ b/src/App.css
@@ -32,14 +32,14 @@ body {
   border-radius: 1rem;
   box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1);
   text-align: center;
-  margin-top: 0; /* Ensure no extra top margin */
+  margin-top: 15px; /* Ensure no extra top margin */
 }
 
 
 .wrapper{
   background: rgba(6, 2, 2, 0.856);
   width: 30rem;
-  height: 10rem;
+  height: 35rem;
   padding: 2rem;
   margin-top: 4rem;
   margin-left: 1rem;
@@ -51,4 +51,34 @@ height: 4rem;
   margin-bottom: 4rem;
   color: #f4fefe;
 
+}
+.buttonBox {
+  display: grid;
+  color: #f4fefe;
+  grid-template-columns: repeat(4, 1fr);
+  gap: .5rem;
+}
+.button {
+  background: #5e7bdb;
+  height: 3.5rem;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #f4fefe;
+  border: none;
+  font-size: 1.5rem;
+}
+.button:hover{
+  border: 3px dotted #f4f4f4;
+}
+.equals{
+background: #06a05b;
+grid-column: 3/5;
+
+}
+.opt {
+  background: #df5c0a;
 }
