--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   align-items: center;
   justify-content: flex-start; 
   gap: 1rem; 
+  padding: 1rem;
 }
 
 .title {
@@ -30,6 +31,7 @@ body {
   color: #df5c0a;
   padding: 1rem;
   border-radius: 1rem;
+  border: 5px solid #0daf33;
   box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1);
   text-align: center;
   margin-top: 15px; /* Ensure no extra top margin */
@@ -41,8 +43,9 @@ body {
   width: 30rem;
   height: 35rem;
   padding: 2rem;
-  margin-top: 4rem;
-  margin-left: 1rem;
+  border: 5px solid #0daf33;
+  margin-top: 2rem;
+  margin-left: -0.5rem;
   border-radius: 1rem;
 
 }
